[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Battle/StreamlinedRecall/StreamlinedRecallBattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/images/monsters/GoldSlime.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/healthbar-bg.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/healthbar-fill.png" type="Texture" id=4]
[ext_resource path="res://assets/images/protagonist.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Lato-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Battle/StreamlinedRecall/RecallGrid.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/battle/actions.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

centered = false
_sections_unfolded = [ "Offset" ]

[node name="MonsterControls" type="Node2D" parent="." index="1"]

position = Vector2( 0, 60 )

[node name="MonsterSprite" type="Sprite" parent="MonsterControls" index="0"]

position = Vector2( 10, 40 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="MonsterHealth" type="TextureProgress" parent="MonsterControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 59.0
margin_right = 240.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Textures" ]

[node name="Label" type="Label" parent="MonsterControls/MonsterHealth" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "75"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="PlayerControls" type="Node2D" parent="." index="2"]

[node name="PlayerSprite" type="Sprite" parent="PlayerControls" index="0"]

position = Vector2( 11.718, -14.4058 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 128 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="PlayerHealth" type="TextureProgress" parent="PlayerControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 29.0
margin_right = 242.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Textures" ]

[node name="Label" type="Label" parent="PlayerControls/PlayerHealth" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "75"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="TurnLabel" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 180.0
margin_right = 253.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Gold slime attacks!!"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="StatusLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 520.0
margin_right = 930.0
margin_bottom = 559.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Slime deals 9999 damage! DIE!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="RecallGrid" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 270, 30 )

[node name="NextTurnButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = 258.0
margin_right = 217.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Turn"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="SkillsPanel" type="Panel" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 734.0
margin_top = 30.0
margin_right = 944.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="SkillsLabel" type="Label" parent="SkillsPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 10.0
margin_right = 179.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Skills"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="TechPointsLabel" type="Label" parent="SkillsPanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 57.0
margin_right = 189.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Tech Points: 0"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="VampireButton" type="Button" parent="SkillsPanel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 110.0
margin_right = 78.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "7"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="SkillsPanel/VampireButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 320, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="BashButton" type="Button" parent="SkillsPanel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.0
margin_top = 110.0
margin_right = 158.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "5"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="SkillsPanel/BashButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 384, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="ActionsPanel" type="Panel" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 316.0
margin_right = 244.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ActionsLabel" type="Label" parent="ActionsPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 3.0
margin_right = 207.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Action Points: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Controls" type="Node2D" parent="ActionsPanel" index="1"]

position = Vector2( 0, 40 )

[node name="AttackButton" type="Button" parent="ActionsPanel/Controls" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 10.0
margin_right = 72.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "2"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="ActionsPanel/Controls/AttackButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="CriticalButton" type="Button" parent="ActionsPanel/Controls" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 10.0
margin_right = 142.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "3"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="ActionsPanel/Controls/CriticalButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="PotionButton" type="Button" parent="ActionsPanel/Controls" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 148.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="ActionsPanel/Controls/PotionButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 192, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="DefendButton" type="Button" parent="ActionsPanel/Controls" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 80.0
margin_right = 72.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = false
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="ActionsPanel/Controls/DefendButton" index="0"]

texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[connection signal="pressed" from="NextTurnButton" to="." method="_on_NextTurnButton_pressed"]

[connection signal="pressed" from="SkillsPanel/VampireButton" to="." method="_on_VampireButton_pressed"]

[connection signal="pressed" from="SkillsPanel/BashButton" to="." method="_on_BashButton_pressed"]

[connection signal="pressed" from="ActionsPanel/Controls/AttackButton" to="." method="_on_AttackButton_pressed"]

[connection signal="pressed" from="ActionsPanel/Controls/CriticalButton" to="." method="_on_CriticalButton_pressed"]

[connection signal="pressed" from="ActionsPanel/Controls/PotionButton" to="." method="_on_PotionButton_pressed"]

[connection signal="pressed" from="ActionsPanel/Controls/DefendButton" to="." method="_on_DefendButton_pressed"]


